[package]
name = "wgpu-stippling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
savegif = [ "gif" ]

[dependencies]
#wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "master" }
wgpu = "0.13"
bytemuck = { version = "1.4", features = [ "derive" ] }
ndarray = "0.15"
pollster = "0.2"
image = "0.23"
winit = "0.26"
rand = "0.7"
env_logger = "0.9"
cgmath = "0.18"
gif = { version = "0.11", optional = true }
anyhow = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
